public/sienna/style.css
/* ... */
.btn_light {
  color: white;
  border: 1px solid #343943;
  background: #333842;
}
#send_hi_btn {
  text-decoration: none;
}

/* location */
.location{
  margin: 30px 3% 50px;
  border-radius: 12px;
  display: flex;
  background-color: #FBF2EB;
  padding: 19px 12px;
  gap: 14px;
  font-size: 14px;
  font-weight: 400;
  color: #000;
}

/* quote section */
.quote_section {
  background: url('/profile/public/sienna/assets/icons/quote.svg');
  background-repeat: no-repeat;
  margin: 30px 3%;
  display: flex;
  color: #626262;
  flex-direction: column;
  gap: 8px;
  padding: 10px 0;

}
.quote_section img {
  width: 43px;
}
.quote_section p {
  text-align: justify;
  font-size: 14px;
  font-weight: 300;
}

.contact_section {
  padding: 0 3%;
  text-align: center;
  margin-top: 55px;
  color: #bdbdbd;
}
.contact_cards {
  margin-top: 24px;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  place-items: center;
  gap: 20px;
}
.contact_card_container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 8px;
}
.contact_card {
  width: 55px;
  height: 55px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 12px;
  background: rgba(235, 190, 155, 0.2);;
  color: white;
  background-blend-mode: overlay, normal;
  transition: 0.1s;
  box-shadow: 0px 1px 1px 0px rgba(255, 255, 255, 0.3) inset, 0px -1px 1px 0px rgba(0, 0, 0, 0.4) inset;
}
.contact_card:hover {
  box-shadow: var(--card-box-shadow);
}
.contact_label {
  font-size: 12px;
  font-weight: 500;
  color: #8a7c72;
  text-align: center;
  margin: 0;
  max-width: 60px;
  word-wrap: break-word;
  line-height: 1.2;
}

/* website links */
.user_contact_sites {
  padding: 0 3%;
  margin-top: 85px;
  display: flex;
  flex-direction: column;
  gap: 18px;
  text-align: center;
}

.user_site_card a {
  width: 100%;
  display: flex;
  justify-content: space-between;
  box-shadow: 0px 1px 1px 0px rgba(255, 255, 255, 0.3) inset, 
    0px -1px 1px 0px rgba(0, 0, 0, 0.4) inset;
  background: #FBF2EB;
  border-radius: 8px;
  padding: 10px 14px;
  text-decoration: none;
  color: #333;
  font-size: 14px;
  font-weight: 400;
  transition: 0.1s;
}
/* .user_site_card a:hover {
  box-shadow: 0px 2px 2px 0px rgba(255, 255, 255, 0.35) inset,
    0px -2px 2px 0px rgba(0, 0, 0, 0.4) inset;
} */
.left_section {
  height: fit-content;
  display: flex;
  justify-content: center;
  gap: 10px;
}

/* products section and awards section*/
.products_section {
  padding: 0 3%;
  text-align: center;
  margin-top: 70px;
}
.products_header{
  height: fit-content;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.products_card_section,
.awards_cards {
  width: 100%;
  display: flex;
  justify-content: space-between;
  margin-top: 18px;
  flex-wrap: wrap;
  gap: 10px;
}
.product_card {
  width: 48%;
  aspect-ratio: 185/200;
  background-blend-mode: overlay, normal;
  border-radius: 8px;
  background: #E5E3E3;
  text-align: left;
}
.product_img,
.award_img {
  width: 100%;
  height: 185px;
  object-fit: cover;
  border-top-right-radius: inherit;
  border-top-left-radius: inherit;
}
.product_details {
  padding: 10px;
  display: flex;
  flex-direction: column;
  gap: 10px;
  background-color: #E5E3E3;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}
.product_name {
  font-size: 14px;
  color: #333;
  font-weight: 400;
}
.product_price {
  display: flex;
  gap: 10px;
}
.product_price p {
  font-size: 16px;
}
.fake_price {
  text-decoration: line-through;
  color: #333;
}
.fake_price:empty{
  display: none;
}

.orginal_price {
  color: #BF631C;
}
.orginal_price:empty{
  display: none;
}

/* services section */
.services_section {
  padding: 3%;
  margin-top: 50px;
}

.service_slider_header,
.awards_slider_header {
  width: 100%;
  height: fit-content;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.service_cards {
  margin-top: 34px;
  margin-bottom: 10px;
}
.glider-track {
  display: flex;
  gap: 20px;
}
.slider_service_card {
  width: 305px;
  height: 352px !important;
  position: relative;
  border-radius: var(--border-radius);
}

.service_details {
  position: absolute;
  bottom: 0;
  left: 0;
  color: #fff;
  padding: 10px;
  width: 100%;
  background: rgba(0, 0, 0, 0.38);
  backdrop-filter: blur(16px);
  border-bottom-left-radius: inherit;
  border-bottom-right-radius: inherit;
}

.service_img {
  width: 100%;
  height: inherit;
  object-fit: cover;
  border-radius: inherit;
}
.service_heading {
  color: #f2f2f2;
}
.service_desc {
  color: #fff;
  margin-top: 8px;
}

/* .services_cards{
    margin-top: 28px;
}
.service_card{
    width: 100%;
    height: fit-content;
    background-color: #222;
    border-radius: var(--border-radius);
    background-blend-mode: overlay, normal;
    box-shadow: 0px 1px 1px 0px rgba(255, 255, 255, 0.35) inset, 0px -1px 1px 0px rgba(0, 0, 0, 0.40) inset;
    text-align: left;
    margin-top: 28px;
}
.service_details{
    padding: 12px 38px;
    display: flex;
    flex-direction: column;
    gap: 10px;
}
.service_img{
    width: 100%;
    height: 200px;
    object-fit: cover;
    border-top-right-radius: inherit;
    border-top-left-radius: inherit;
}
.service_name{
    font-size: 14px;
    font-weight: 600;
}
.service_para{
    color: rgba(255, 255, 255, 0.60);
    font-size: 12px;
    font-weight: 300;
    text-align: justify;
}
.view_more_btn{
    width: 100%;
    display: flex;
    justify-content: center;
    margin-top: 20px;
} */

/* youtube player */
.youtube_player_section {
  padding: 0 3%;
  margin-top: 45px;
}
.youtube_player {
  border-radius: var(--border-radius);
  margin-top: 12px;
}
.yt_iframe {
  width: 100%;
  height: 225px;
  border-radius: inherit;
  overflow: hidden;
}

/* awards section */
.awards_section {
  padding: 0 3%;
  margin-top: 53px;
  text-align: center;
}
.award_title {
  color: #333;
}
.award_organisation {
  color: #757575;
}
/* ... */

